syntax = "proto3";

package onchainpoker.poker.v1;

option go_package = "x/poker/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";

// Msg defines the x/poker Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc CreateTable(MsgCreateTable) returns (MsgCreateTableResponse);
  rpc Sit(MsgSit) returns (MsgSitResponse);
  rpc StartHand(MsgStartHand) returns (MsgStartHandResponse);
  rpc Act(MsgAct) returns (MsgActResponse);
  rpc Tick(MsgTick) returns (MsgTickResponse);
  rpc Leave(MsgLeave) returns (MsgLeaveResponse);
}

message MsgCreateTable {
  option (cosmos.msg.v1.signer) = "creator";
  option (gogoproto.goproto_getters) = false;

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  uint64 small_blind = 2;
  uint64 big_blind = 3;
  uint64 min_buy_in = 4;
  uint64 max_buy_in = 5;

  uint64 action_timeout_secs = 6;
  uint64 dealer_timeout_secs = 7;
  uint64 player_bond = 8;
  uint32 rake_bps = 9;

  uint32 max_players = 10; // default 9
  string label = 11;
}

message MsgCreateTableResponse {
  uint64 table_id = 1;
}

message MsgSit {
  option (cosmos.msg.v1.signer) = "player";
  option (gogoproto.goproto_getters) = false;

  string player = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 table_id = 2;
  uint32 seat = 3; // 0..8
  uint64 buy_in = 4;

  bytes pk_player = 5; // 32-byte ristretto point (required for dealer mode)
}

message MsgSitResponse {}

message MsgStartHand {
  option (cosmos.msg.v1.signer) = "caller";
  option (gogoproto.goproto_getters) = false;

  string caller = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 table_id = 2;
}

message MsgStartHandResponse {}

message MsgAct {
  option (cosmos.msg.v1.signer) = "player";
  option (gogoproto.goproto_getters) = false;

  string player = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 table_id = 2;

  // fold|check|call|bet|raise
  string action = 3;

  // For bet/raise: desired total street commitment ("BetTo").
  uint64 amount = 4;
}

message MsgActResponse {}

message MsgTick {
  option (cosmos.msg.v1.signer) = "caller";
  option (gogoproto.goproto_getters) = false;

  string caller = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 table_id = 2;
}

message MsgTickResponse {}

message MsgLeave {
  option (cosmos.msg.v1.signer) = "player";
  option (gogoproto.goproto_getters) = false;

  string player = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 table_id = 2;
}

message MsgLeaveResponse {}
